<resources>
    <string name="app_name">MyLoginApp</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login_btn">LOGIN</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="or_sign_in_with">or sign in with</string>
    <string name="image_description">image Description</string>
    <string name="sign_in">Sign in</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hello">Hello</string>
    <string name="course_selector">Course</string>
    <string name="semester_selector">Semester</string>

    <string-array name="course_selection">
        <item>BCA</item>
        <item>BSc It</item>
        <item>MCA</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="show_date">Date</string>
    <string name="show_time">Time</string>
    <string name="proceed_btn">Proceed</string>
    <string name="dummyDate">21-Nov-2021</string>
</resources>