<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/username"
        android:layout_below="@id/signin"
        android:background="#30ffffff"
        android:hint="@string/username"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:drawableStart="@drawable/ic_baseline_person_outline_24"
        android:drawablePadding="20dp"
        android:autofillHints="@string/username"
        android:inputType="text" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password"
        android:layout_below="@id/username"
        android:background="#30ffffff"
        android:hint="@string/password"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:drawableStart="@drawable/ic_baseline_info_24"
        android:drawablePadding="20dp"
        android:inputType="textPassword"
        android:autofillHints="username"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/loginbtn"
        android:layout_below="@id/password"
        android:text="@string/login_btn"
        android:backgroundTint="@color/design_default_color_secondary"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/forgotpass"
        android:layout_below="@id/loginbtn"
        android:text="@string/forgot_password"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"/>


    <!--    <LinearLayout-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:id="@+id/socialicons"-->
    <!--        android:layout_alignParentBottom="true"-->
    <!--        android:gravity="center">-->


    <!--        <ImageView-->
    <!--            android:layout_width="48dp"-->
    <!--            android:layout_height="48dp"-->
    <!--            android:layout_margin="20dp"-->
    <!--            android:src="@drawable/google"-->
    <!--            android:contentDescription="@string/image_description" />-->
    <!--        <ImageView-->
    <!--            android:layout_width="48dp"-->
    <!--            android:layout_height="48dp"-->
    <!--            android:layout_margin="20dp"-->
    <!--            android:src="@drawable/fb"-->
    <!--            android:contentDescription="@string/image_description"/>-->
    <!--        <ImageView-->
    <!--            android:layout_width="48dp"-->
    <!--            android:layout_height="48dp"-->
    <!--            android:layout_margin="20dp"-->
    <!--            android:src="@drawable/twitter"-->
    <!--            android:contentDescription="@string/image_description"/>-->

    <!--    </LinearLayout>-->


</RelativeLayout>