<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChooseAttendance">

    <Button
        android:id="@+id/button_back"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:background="@drawable/round_button"
        android:drawableStart="@drawable/ic_back_btn"
        android:drawablePadding="105dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:flow_verticalAlign="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/course_selector"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_back">

        <AutoCompleteTextView
            android:id="@+id/auto_complete_txt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:lines="1"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/semester_selector"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
        tools:layout_editor_absoluteX="16dp">

        <AutoCompleteTextView
            android:id="@+id/auto_complete_txt_sem"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:imeOptions=""
            android:lines="1"
            android:maxLines="1"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_margin="50dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:flow_horizontalAlign="center"
        app:flow_verticalAlign="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_back">

        <TextView
            android:id="@+id/date_stamp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/show_date"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textSize="22sp" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:contentDescription="@string/image_description"
            app:srcCompat="@drawable/calendar"
            app:tint="#C1000000" />
    </LinearLayout>


    <RelativeLayout
        android:id="@+id/proceed_btn"
        android:layout_width="55dp"
        android:layout_height="55dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.3"
            android:contentDescription="@string/image_description"
            android:src="@drawable/bg_right_purple"
            app:tint="#77000000" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginBottom="1dp"
            android:contentDescription="@string/image_description"
            android:src="@drawable/bg_right_purple" />

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp"
            android:src="@drawable/arrow_right"
            app:tint="#FFF" />

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>