<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/student"
    android:layout_centerVertical="true"
    app:cardElevation="0dp"
    app:cardPreventCornerOverlap="false"
    android:background="#00F1F1F1"
    app:cardBackgroundColor="#00F1F1F1">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="#00F1F1F1"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="20dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0.3"
                android:contentDescription="@string/image_description"
                android:src="@drawable/bg_view_attendance"
                app:tint="#77000000" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="3dp"
                android:contentDescription="@string/image_description"
                android:src="@drawable/bg_view_attendance" />

        </RelativeLayout>

        <androidx.cardview.widget.CardView

            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="25dp"
            android:elevation="12dp"
            android:foregroundGravity="center_vertical"
            android:innerRadius="110dp"
            android:shape="ring"
            android:thicknessRatio="1.9"
            app:cardCornerRadius="250dp">

            <TextView
                android:id="@+id/text_view_rno"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:background="@drawable/circle_text"
                android:gravity="center"
                android:shadowColor="@android:color/white"
                android:shadowRadius="10.0"
                android:text="4"
                android:textColor="#F75F71"
                android:textSize="22sp"
                android:textStyle="bold"/>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="100dp"
            android:divider="#00F1F1F1"
            android:showDividers="none"
            android:dividerPadding="0dp"
            android:layout_marginEnd="40dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_view_name"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="bottom"
                android:gravity="bottom"
                android:textColor="#000"
                android:fontFamily="@font/texgyreadventor_regular"
                android:textStyle="bold"
                android:textSize="15sp"
                android:layout_weight="1"
                android:maxLines="1"
                android:lines="1"
                android:singleLine="true"
                android:text="@string/username"
                android:inputType="textCapSentences" />

            <TextView
                android:id="@+id/view_username_attendance_status6"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:inputType="textCapSentences"
                android:text="@string/password"
                android:layout_weight="1" />
        </LinearLayout>



    </RelativeLayout>

</androidx.cardview.widget.CardView>