<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00F1F1F1"
    android:layout_marginTop="10dp"
    tools:context=".ViewAttendance">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="20dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0.3"
                android:contentDescription="@string/image_description"
                android:src="@drawable/bg_view_attendance"
                app:tint="#77000000" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="3dp"
                android:layout_marginBottom="3dp"
                android:contentDescription="@string/image_description"
                android:src="@drawable/bg_view_attendance" />

        </RelativeLayout>

        <androidx.cardview.widget.CardView

            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="25dp"
            android:elevation="12dp"
            android:foregroundGravity="center_vertical"
            android:innerRadius="110dp"
            android:shape="ring"
            android:thicknessRatio="1.9"
            app:cardCornerRadius="250dp">

            <ImageView
                android:id="@+id/student_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/image_description"
                android:src="@drawable/profile3" />

        </androidx.cardview.widget.CardView>

        <RelativeLayout
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:layout_centerVertical="true">

            <ImageView
                android:contentDescription="@string/image_description"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0.3"
                android:src="@drawable/bg_right"
                app:tint="#77000000" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="1dp"
                android:contentDescription="@string/image_description"
                android:layout_marginRight="1dp"
                android:layout_marginBottom="1dp"
                android:src="@drawable/bg_right" />

            <androidx.constraintlayout.utils.widget.ImageFilterView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:src="@drawable/arrow_right"
                app:tint="#f75F71" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="40dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/view_username_attendance"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="bottom"
                android:gravity="bottom"
                android:textColor="#000"
                android:fontFamily="@font/texgyreadventor_regular"
                android:textStyle="bold"
                android:textSize="15sp"
                android:layout_weight="1"
                android:maxLines="1"
                android:lines="1"
                android:singleLine="true"
                android:text="@string/username"
                android:inputType="textCapSentences" />

            <TextView
                android:id="@+id/view_username_attendance_status"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:inputType="textCapSentences"
                android:text="@string/password"
                android:layout_weight="1" />
        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>